--- a/index.html
+++ b/index.html
@@ -65,17 +65,21 @@
                         <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
                         <form class="modal-form">
                             <div class="modal-div">
-                                <label class="modal-label" for="username">Ім'я</label>
-                                <input class="modal-input" type="text" id="username" required>
-                                <label class="modal-label" for="userphone">Телефон</label>
-                                <input class="modal-input" type="text" id="userphone" required>
-                                <label class="modal-label" for="usermail">Пошта</label>
-                                <input class="modal-input" type="text" id="usermail" required>
+                                <div class="modal-div-username">
+                                    <label class="modal-label" for="username">Ім'я</label>
+                                    <input class="modal-input" type="text" id="username" required>
+                                </div>
+                                <div class="modal-div-userphone">
+                                    <label class="modal-label" for="userphone">Телефон</label>
+                                    <input class="modal-input" type="text" id="userphone" required>
+                                </div>
+                                <div class="modal-div-usermail">
+                                    <label class="modal-label" for="usermail">Пошта</label>
+                                    <input class="modal-input" type="text" id="usermail" required>
+                                </div>
                                 <label class="modal-label" for="coments">Коментар</label>
                                 <input class="modal-coments" type="text" id="coments" placeholder="Введіть текст"
                                     required>
-                                <!-- </div> -->
-                                <!-- <div class="send-div"> -->
                                 <input class="modal-checkbox" type="checkbox" id="checkbox">
                                 <label class="checkbox-label" for="checkbox">Погоджуюся з розсилкою та приймаю
                                     <a href="/">
