--- a/index.html
+++ b/index.html
@@ -68,14 +68,23 @@
                                 <div class="modal-div-username">
                                     <label class="modal-label" for="username">Ім'я</label>
                                     <input class="modal-input" type="text" id="username" required>
+                                    <svg class="modal-svg" width="18px" height="18px">
+                                        <use href="./images/symbol-defs.svg#person-black"></use>
+                                    </svg>
                                 </div>
                                 <div class="modal-div-userphone">
                                     <label class="modal-label" for="userphone">Телефон</label>
                                     <input class="modal-input" type="text" id="userphone" required>
+                                    <svg class="modal-svg" width="18px" height="18px">
+                                        <use href="./images/symbol-defs.svg#phone-black"></use>
+                                    </svg>
                                 </div>
                                 <div class="modal-div-usermail">
                                     <label class="modal-label" for="usermail">Пошта</label>
                                     <input class="modal-input" type="text" id="usermail" required>
+                                    <svg class="modal-svg" width="18px" height="18px">
+                                        <use href="./images/symbol-defs.svg#email-black"></use>
+                                    </svg>
                                 </div>
                                 <label class="modal-label" for="coments">Коментар</label>
                                 <input class="modal-coments" type="text" id="coments" placeholder="Введіть текст"
