--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
                         <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
                         <form class="modal-form">
                             <div class="modal-div">
-                                <div class="modal-div-username">
+                                <div class="modal-form-div">
                                     <label class="modal-label" for="username">Ім'я</label>
                                     <input class="modal-input" type="text" id="username" required>
                                     <svg class="modal-svg" width="18px" height="18px">
                                         <use href="./images/symbol-defs.svg#person-black"></use>
                                     </svg>
                                 </div>
-                                <div class="modal-div-userphone">
+                                <div class="modal-form-div">
                                     <label class="modal-label" for="userphone">Телефон</label>
                                     <input class="modal-input" type="text" id="userphone" required>
                                     <svg class="modal-svg" width="18px" height="18px">
                                         <use href="./images/symbol-defs.svg#phone-black"></use>
                                     </svg>
                                 </div>
-                                <div class="modal-div-usermail">
+                                <div class="modal-form-div">
                                     <label class="modal-label" for="usermail">Пошта</label>
                                     <input class="modal-input" type="text" id="usermail" required>
                                     <svg class="modal-svg" width="18px" height="18px">
