--- a/portfolio.html
+++ b/portfolio.html
@@ -72,9 +72,19 @@
                 </ul>
                 <ul class="works-list">
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img.jpg" alt="технокряк">
-                        <h2 class="item-nameofsite-title">Технокряк</h2>
-                        <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img.jpg" alt="технокряк">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Технокряк</h2>
+                            <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
                         <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
