--- a/portfolio.html
+++ b/portfolio.html
@@ -87,44 +87,124 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                        <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="item-nameofsite-portfoli">Дизайн</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="item-nameofsite-portfoli">Дизайн</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
-                        <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
-                        <p class="item-nameofsite-portfoli">Додаток</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
+                            <p class="item-nameofsite-portfoli">Додаток</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
-                        <h2 class="item-nameofsite-title">Проєкт Prime</h2>
-                        <p class="item-nameofsite-portfoli">Маркетинг</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Проєкт Prime</h2>
+                            <p class="item-nameofsite-portfoli">Маркетинг</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
-                        <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
-                        <p class="item-nameofsite-portfoli">Додаток</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
+                            <p class="item-nameofsite-portfoli">Додаток</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
-                        <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
-                        <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
+                            <p class="item-nameofsite-portfoli">Веб-сайт</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
-                        <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
-                        <p class="item-nameofsite-portfoli">Дизайн</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
+                            <p class="item-nameofsite-portfoli">Дизайн</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
-                        <h2 class="item-nameofsite-title">Проєкт LAB</h2>
-                        <p class="item-nameofsite-portfoli">Маркетинг</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Проєкт LAB</h2>
+                            <p class="item-nameofsite-portfoli">Маркетинг</p>
+                        </a>
                     </li>
                     <li class="works-list-item">
-                        <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
-                        <h2 class="item-nameofsite-title">Growing Business</h2>
-                        <p class="item-nameofsite-portfoli">Додаток</p>
+                        <a class="card-link" href="/">
+                            <div class="card-overlay-box">
+                                <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
+                                <p class="card-text">Ресурс пропонує комплексні
+                                    пропозиції з різним рівнем
+                                    функціоналу та сервісів. Все це
+                                    дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію
+                                    чи приватну особу.</p>
+                            </div>
+                            <h2 class="item-nameofsite-title">Growing Business</h2>
+                            <p class="item-nameofsite-portfoli">Додаток</p>
+                        </a>
                     </li>
                 </ul>
             </div>
