--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                     </li>
                     <li class="links-item">
                         <ul class="social-links">
-                            <li class="social-links-item"><a class="social-links-link"
-                                    href="https://www.instagram.com/">
+                            <li class="social-links-item">
+                                <a class="social-links-link" href="https://www.instagram.com/">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none">
                                         <g fill="#fff" clip-path="url(#a)">
                                             <path
