--- a/portfolio.html
+++ b/portfolio.html
@@ -296,6 +296,19 @@
                         </ul>
                     </li>
                 </ul>
+                <div class="sending">
+                    <p class="sending-text">
+                        Підпишіться на розсилку
+                    </p>
+                    <form class="footer-form">
+                        <input class="footer-input" type="text" id="rozsilka" placeholder="E-mail">
+                        <button class="footer-subscribe-button">Підписатися
+                            <svg class="footer-svg">
+                                <use href="./images/symbol-defs.svg#send"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </address>
         </div>
     </footer>
