--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                                     </svg>
                                 </div>
                                 <label class="modal-label" for="coments">Коментар</label>
-                                <textarea class="modal-coments" type="text" id="coments"
-                                    placeholder="Введіть текст"></textarea>
+                                <textarea class="modal-coments" id="coments" placeholder="Введіть текст"></textarea>
                                 <input class="modal-checkbox" type="checkbox" id="checkbox">
                                 <label class="checkbox-label" for="checkbox">Погоджуюся з розсилкою та приймаю
                                     <a href="/">
