--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                 </ul>
                 <ul class="works-list">
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img.jpg" alt="технокряк">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -87,7 +87,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -132,7 +132,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -147,7 +147,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -162,7 +162,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -177,7 +177,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
                                 <p class="card-text">Ресурс пропонує комплексні
@@ -192,7 +192,7 @@
                         </a>
                     </li>
                     <li class="works-list-item">
-                        <a class="card-link" href="/">
+                        <a class="card-link" href="#">
                             <div class="card-overlay-box">
                                 <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
                                 <p class="card-text">Ресурс пропонує комплексні
